[package]
name = "crusty_flie"
version = "0.1.0"
authors = ["maiso <michielaiso@hotmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
embedded-hal = "0.2.3"
cortex-m-rt = "0.6.10"
cortex-m="0.6.1"
crazy_flie = { path = "../crazy_flie" }

[dependencies.stm32f4]
version = "0.6.0"
features = ["stm32f405"]
